Fix code/.spip_code + largeur maxi sur les images des documents + fix le permalink des commentaires pas toujours visible
git-svn-id: svn://zone.spip.org/spip-zone/_plugins_@123038 ac52e18a-acf5-0310-9fe8-c4428f23b10a

--- a/bootstrap4/trunk/bootstrap2spip/css/_code.scss
+++ b/bootstrap4/trunk/bootstrap2spip/css/_code.scss
@@ -3,9 +3,15 @@
 code {
   white-space:inherit;
 }
-.spip_code {
+code, .spip_code {
   color: $code-color;
   word-break: break-word;
+  background: rgba($gray-500,0.07);
+  border:1px solid rgba($gray-500,0.15);
+  padding: $padding-y-xs $padding-x-xs;
+  @if $enable-rounded {
+    border-radius: $border-radius-sm;
+  }
 
   // Streamline the style when inside anchors to avoid broken underline and more
   a > & {
