--- a/bootstrap4/trunk/bootstrap2spip/css/spip.comment.scss
+++ b/bootstrap4/trunk/bootstrap2spip/css/spip.comment.scss
@@ -32,7 +32,7 @@
 
 .comment-meta {padding-left: 3 * $grid-gutter-width;position: relative;}
 .comment-meta .spip_logo {position:absolute;left: $grid-gutter-width / 2;}
-.comment-meta .permalink { position: absolute;right: 0;font-size: 2rem;color:$gray-100;}
+.comment-meta .permalink { position: absolute;right: 0;font-size: 2rem;color:rgba($gray-500,0.25);}
 
 //.comment-item .comment-item .comment-meta {background : #f4f4f4;}
 .comment-meta .forum-titre {display: block;}
